// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationHint styles should render with default styles 1`] = `
.circuit-0 {
  font-size: 13px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<span
  class="circuit-0"
>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with invalid styles 1`] = `
.circuit-1 {
  font-size: 13px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #D23F47;
}

.circuit-0 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 16px;
  height: 16px;
  margin-top: 0.15em;
  margin-right: 4px;
  color: #D23F47;
}

<span
  class="circuit-1"
>
  <svg
    class="circuit-0"
    fill="none"
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16 8A8 8 0 110 8a8 8 0 0116 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with valid styles 1`] = `
.circuit-1 {
  font-size: 13px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #138849;
}

.circuit-0 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 16px;
  height: 16px;
  margin-top: 0.15em;
  margin-right: 4px;
  color: #138849;
}

<span
  class="circuit-1"
>
  <svg
    class="circuit-0"
    fill="none"
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-4.101-1.914a1 1 0 00-1.562-1.25L6.921 9.108 5.654 7.84a1 1 0 10-1.415 1.414l2.057 2.057a1 1 0 001.488-.082L11.9 6.086z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  This field is required
</span>
`;

exports[`ValidationHint styles should render with warning styles 1`] = `
.circuit-1 {
  font-size: 13px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 16px;
  height: 16px;
  margin-top: 0.15em;
  margin-right: 4px;
  color: #F5C625;
}

<span
  class="circuit-1"
>
  <svg
    class="circuit-0"
    fill="none"
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16 8A8 8 0 110 8a8 8 0 0116 0zM9 4a1 1 0 10-2 0v4.5a1 1 0 002 0V4zm0 7.5a1 1 0 10-2 0v.5a1 1 0 102 0v-.5z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  This field is required
</span>
`;
